Bug 1307122 - Introducing a timeout for sync XHR when unload events are dispatched, r=smaug